@@ -1,5 +1,15 @@
 2017-03-05  Brady Eidson  <beidson@apple.com>
 
+        Remove new files accidentally added in r213441
+
+        Unreviewed.
+
+        * UIProcess/WebLoadingProviderProxy.cpp: Removed.
+        * UIProcess/WebLoadingProviderProxy.h: Removed.
+        * UIProcess/WebLoadingProviderProxy.messages.in: Removed.
+
+2017-03-05  Brady Eidson  <beidson@apple.com>
+
         Rename CustomProtocolFoo to LegacyCustomProtocolFoo.
         https://bugs.webkit.org/show_bug.cgi?id=169188
 
